lfr/antlrgen/lfr/lfrXParser.py
# Generated from ./lfrX.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lfrXParser ( Parser ):

    grammarFileName = "lfrX.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'endmodule'", "'module'", "'('", "')'", 
                     "';'", "','", "'finput'", "'foutput'", "'control'", 
                     "'distribute@'", "'begin'", "'end'", "'if'", "'else'", 
                     "'||'", "'&&'", "'|'", "'^'", "'^~'", "'~^'", "'&'", 
                     "'=='", "'!='", "'endcase'", "'case'", "':'", "'default'", 
                     "'<='", "'#'", "'='", "'.'", "'None'", "'signal'", 
                     "'flow'", "'storage'", "'pump'", "'number'", "'assign'", 
                     "'['", "']'", "'{'", "'}'", "'#MAP'", "'\"'", "'#MATERIAL'", 
                     "'#CONSTRAIN'", "'AND'", "'OR'", "'#TERMINAL'", "'>'", 
                     "'<'", "'>='", "'+'", "'-'", "'!'", "'~'", "'~&'", 
                     "'~|'", "'*'", "'/'", "'%'", "'==='", "'!=='", "'**'", 
                     "'>>'", "'<<'", "'>>>'", "'<<<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "WS", "One_line_comment", "Block_comment", 
                      "Import_line", "Real_number", "Decimal_number", "Binary_number", 
                      "Octal_number", "Hex_number" ]

    RULE_skeleton = 0
    RULE_module = 1
    RULE_moduledefinition = 2
    RULE_body = 3
    RULE_ioblock = 4
    RULE_vectorvar = 5
    RULE_explicitIOBlock = 6
    RULE_declvar = 7
    RULE_distributionBlock = 8
    RULE_distributionBody = 9
    RULE_distributeBodyStat = 10
    RULE_ifElseBlock = 11
    RULE_ifBlock = 12
    RULE_elseBlock = 13
    RULE_elseIfBlock = 14
    RULE_distributeCondition = 15
    RULE_distributeOrExpr = 16
    RULE_distributeAndExpr = 17
    RULE_distributeBitOrExpr = 18
    RULE_distributeBitXorExpr = 19
    RULE_distributeBitAndExpr = 20
    RULE_distributeEqualityExpr = 21
    RULE_distributePrimary = 22
    RULE_statementBlock = 23
    RULE_caseBlock = 24
    RULE_caseBlockHeader = 25
    RULE_casestat = 26
    RULE_defaultCaseStat = 27
    RULE_distvalue = 28
    RULE_distributionassignstat = 29
    RULE_sensitivitylist = 30
    RULE_signal = 31
    RULE_statements = 32
    RULE_statement = 33
    RULE_moduleinstantiationstat = 34
    RULE_moduleparamlist = 35
    RULE_moduleparam = 36
    RULE_instanceioblock = 37
    RULE_orderedioblock = 38
    RULE_unorderedioblock = 39
    RULE_explicitinstanceiomapping = 40
    RULE_instancename = 41
    RULE_moduletype = 42
    RULE_tempvariablesstat = 43
    RULE_signalvarstat = 44
    RULE_fluiddeclstat = 45
    RULE_storagestat = 46
    RULE_pumpvarstat = 47
    RULE_numvarstat = 48
    RULE_assignstat = 49
    RULE_literalassignstat = 50
    RULE_bracketexpression = 51
    RULE_expression = 52
    RULE_expressionterm = 53
    RULE_logiccondition_operand = 54
    RULE_logiccondition = 55
    RULE_logic_value = 56
    RULE_vector = 57
    RULE_variables = 58
    RULE_concatenation = 59
    RULE_lhs = 60
    RULE_ioassignstat = 61
    RULE_technologydirectives = 62
    RULE_technologymappingdirective = 63
    RULE_materialmappingdirective = 64
    RULE_mappingoperator = 65
    RULE_constrainttarget = 66
    RULE_performancedirective = 67
    RULE_terminaldirective = 68
    RULE_terminalbinding = 69
    RULE_constraint = 70
    RULE_unit = 71
    RULE_unary_operator = 72
    RULE_binary_operator = 73
    RULE_unary_module_path_operator = 74
    RULE_binary_module_path_operator = 75
    RULE_number = 76

    ruleNames =  [ "skeleton", "module", "moduledefinition", "body", "ioblock", 
                   "vectorvar", "explicitIOBlock", "declvar", "distributionBlock", 
                   "distributionBody", "distributeBodyStat", "ifElseBlock", 
                   "ifBlock", "elseBlock", "elseIfBlock", "distributeCondition", 
                   "distributeOrExpr", "distributeAndExpr", "distributeBitOrExpr", 
                   "distributeBitXorExpr", "distributeBitAndExpr", "distributeEqualityExpr", 
                   "distributePrimary", "statementBlock", "caseBlock", "caseBlockHeader", 
                   "casestat", "defaultCaseStat", "distvalue", "distributionassignstat", 
                   "sensitivitylist", "signal", "statements", "statement", 
                   "moduleinstantiationstat", "moduleparamlist", "moduleparam", 
                   "instanceioblock", "orderedioblock", "unorderedioblock", 
                   "explicitinstanceiomapping", "instancename", "moduletype", 
                   "tempvariablesstat", "signalvarstat", "fluiddeclstat", 
                   "storagestat", "pumpvarstat", "numvarstat", "assignstat", 
                   "literalassignstat", "bracketexpression", "expression", 
                   "expressionterm", "logiccondition_operand", "logiccondition", 
                   "logic_value", "vector", "variables", "concatenation", 
                   "lhs", "ioassignstat", "technologydirectives", "technologymappingdirective", 
                   "materialmappingdirective", "mappingoperator", "constrainttarget", 
                   "performancedirective", "terminaldirective", "terminalbinding", 
                   "constraint", "unit", "unary_operator", "binary_operator", 
                   "unary_module_path_operator", "binary_module_path_operator", 
                   "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    ID=69
    WS=70
    One_line_comment=71
    Block_comment=72
    Import_line=73
    Real_number=74
    Decimal_number=75
    Binary_number=76
    Octal_number=77
    Hex_number=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SkeletonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.ModuleContext)
            else:
                return self.getTypedRuleContext(lfrXParser.ModuleContext,i)


        def getRuleIndex(self):
            return lfrXParser.RULE_skeleton

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkeleton" ):
                listener.enterSkeleton(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkeleton" ):
                listener.exitSkeleton(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkeleton" ):
                return visitor.visitSkeleton(self)
            else:
                return visitor.visitChildren(self)




    def skeleton(self):

        localctx = lfrXParser.SkeletonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_skeleton)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 154
                self.module()
                self.state = 157 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moduledefinition(self):
            return self.getTypedRuleContext(lfrXParser.ModuledefinitionContext,0)


        def body(self):
            return self.getTypedRuleContext(lfrXParser.BodyContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = lfrXParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.moduledefinition()
            self.state = 160
            self.body()
            self.state = 161
            self.match(lfrXParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuledefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lfrXParser.ID, 0)

        def ioblock(self):
            return self.getTypedRuleContext(lfrXParser.IoblockContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_moduledefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuledefinition" ):
                listener.enterModuledefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuledefinition" ):
                listener.exitModuledefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuledefinition" ):
                return visitor.visitModuledefinition(self)
            else:
                return visitor.visitChildren(self)




    def moduledefinition(self):

        localctx = lfrXParser.ModuledefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moduledefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(lfrXParser.T__1)
            self.state = 164
            self.match(lfrXParser.ID)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 165
                self.match(lfrXParser.T__2)
                self.state = 166
                self.ioblock()
                self.state = 167
                self.match(lfrXParser.T__3)


            self.state = 171
            self.match(lfrXParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.StatementsContext)
            else:
                return self.getTypedRuleContext(lfrXParser.StatementsContext,i)


        def distributionBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.DistributionBlockContext)
            else:
                return self.getTypedRuleContext(lfrXParser.DistributionBlockContext,i)


        def getRuleIndex(self):
            return lfrXParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = lfrXParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 175
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [7, 8, 9, 33, 34, 35, 36, 37, 38, 43, 45, 46, 49, 69]:
                    self.state = 173
                    self.statements()
                    pass
                elif token in [10]:
                    self.state = 174
                    self.distributionBlock()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 177 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 7)) & ~0x3f) == 0 and ((1 << (_la - 7)) & 4611691314054955023) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vectorvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.VectorvarContext)
            else:
                return self.getTypedRuleContext(lfrXParser.VectorvarContext,i)


        def explicitIOBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.ExplicitIOBlockContext)
            else:
                return self.getTypedRuleContext(lfrXParser.ExplicitIOBlockContext,i)


        def getRuleIndex(self):
            return lfrXParser.RULE_ioblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIoblock" ):
                listener.enterIoblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIoblock" ):
                listener.exitIoblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIoblock" ):
                return visitor.visitIoblock(self)
            else:
                return visitor.visitChildren(self)




    def ioblock(self):

        localctx = lfrXParser.IoblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ioblock)
        self._la = 0 # Token type
        try:
            self.state = 195
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [69]:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.vectorvar()
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 180
                    self.match(lfrXParser.T__5)
                    self.state = 181
                    self.vectorvar()
                    self.state = 186
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [7, 8, 9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.explicitIOBlock()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 188
                    self.match(lfrXParser.T__5)
                    self.state = 189
                    self.explicitIOBlock()
                    self.state = 194
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VectorvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lfrXParser.ID, 0)

        def vector(self):
            return self.getTypedRuleContext(lfrXParser.VectorContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_vectorvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVectorvar" ):
                listener.enterVectorvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVectorvar" ):
                listener.exitVectorvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVectorvar" ):
                return visitor.visitVectorvar(self)
            else:
                return visitor.visitChildren(self)




    def vectorvar(self):

        localctx = lfrXParser.VectorvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vectorvar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(lfrXParser.ID)
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 198
                self.vector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExplicitIOBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.DeclvarContext)
            else:
                return self.getTypedRuleContext(lfrXParser.DeclvarContext,i)


        def getRuleIndex(self):
            return lfrXParser.RULE_explicitIOBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExplicitIOBlock" ):
                listener.enterExplicitIOBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExplicitIOBlock" ):
                listener.exitExplicitIOBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExplicitIOBlock" ):
                return visitor.visitExplicitIOBlock(self)
            else:
                return visitor.visitChildren(self)




    def explicitIOBlock(self):

        localctx = lfrXParser.ExplicitIOBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_explicitIOBlock)
        try:
            self.state = 228
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.match(lfrXParser.T__6)
                self.state = 202
                self.declvar()
                self.state = 207
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 203
                        self.match(lfrXParser.T__5)
                        self.state = 204
                        self.declvar() 
                    self.state = 209
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 210
                self.match(lfrXParser.T__7)
                self.state = 211
                self.declvar()
                self.state = 216
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 212
                        self.match(lfrXParser.T__5)
                        self.state = 213
                        self.declvar() 
                    self.state = 218
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 219
                self.match(lfrXParser.T__8)
                self.state = 220
                self.declvar()
                self.state = 225
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 221
                        self.match(lfrXParser.T__5)
                        self.state = 222
                        self.declvar() 
                    self.state = 227
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lfrXParser.ID, 0)

        def vector(self):
            return self.getTypedRuleContext(lfrXParser.VectorContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_declvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclvar" ):
                listener.enterDeclvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclvar" ):
                listener.exitDeclvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclvar" ):
                return visitor.visitDeclvar(self)
            else:
                return visitor.visitChildren(self)




    def declvar(self):

        localctx = lfrXParser.DeclvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declvar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 231
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 230
                self.vector()

